fixed front-page flip-card alignment

--- a/flipcards.css
+++ b/flipcards.css
@@ -1,6 +1,6 @@
 .flip-card {
     position:relative;
-    left: 200px;
+    left: 400px;
     background-color: transparent;
     width: 643px;
     height: 459px;
